# Hololand

./: .ai-decisions.md  .ai-schedule.yml  .cursorrules  .env.example  .eslintrc.json.backup  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  AGENTS.md  AI_AGENT_INTEGRATION_SYSTEM.md  AI_ARCHITECTURE.md  AI_INTEGRATION_STATUS.md  AR_VR_MODE_SWITCHING.md  BATTLEARENA_PROJECT_SUMMARY.md  BATTLEARENA_TESTS_COMPLETE.md  BRITTNEY_GAME_ARCHITECTURE.md  BRITTNEY_GAME_DELIVERY.md  BRITTNEY_GAME_IMPLEMENTATION_COMPLETE.md  BRITTNEY_GAME_INTEGRATION.md  BRITTNEY_GAME_QUICK_REF.md  BRITTNEY_GAME_VISUAL_OVERVIEW.md  BRITTNEY_TOOLKIT_TEST_COMPLETION.md  CHANGELOG.md  CLAUDE.md  COMPLETE_DELIVERABLES_SUMMARY.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  CREATOR_ONBOARDING_PLATFORM.md  CREATOR_PROGRAM_SYSTEM.md  DEPLOYMENT_STATUS.md  DEPRECATION.md  DEVELOPMENT_ROADMAP_2026.md  DEVELOPMENT_TODO.md  DNS_CONFIGURATION.md  DOCUMENTATION_INDEX.md  Dockerfile  ECOSYSTEM_AND_VISION.md  (+69 more)
.antigravity/: mcp.json  mcp.json.backup-1769832873516
.claude/: settings.json
.github/: copilot-instructions.md  pull_request_template.md
apps/brittney-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/brittney-desktop/src-tauri/models/: README.md
apps/brittney-desktop/src-tauri/src/: main.rs
apps/brittney-desktop/src-tauri/src/inference/: mod.rs  ollama.rs  providers.rs  settings.rs
config/: model-artifact-lanes.json
docs/: 2D_APP_GUIDE.md  AGENT_HOLOSCRIPT_TOOLING.md  API_REFERENCE.md  ARCHITECTURE_DECISIONS.md  AUTONOMOUS_VR_OPTIMIZATION_ROADMAP.md  AVATAR_STUDIO_BRIDGE.md  BACKEND_NODES_DESIGN.md  BATTLEARENA_COMPLETION_REPORT.md  BATTLEARENA_FILE_MANIFEST.md  BATTLEARENA_STATUS_REPORT.md  BRITTNEY_ACCESS_CONTRACT.md  BRITTNEY_AI_PACKAGE_INDEX.md  BRITTNEY_CONTEXT.md  BRITTNEY_FINETUNING_INSTRUCTIONS.md  BRITTNEY_HOLOSCRIPT_CONTEXT.md  BRITTNEY_MODELS_DEPLOYMENT.md  BRITTNEY_OWNERSHIP_MODEL.md  BRITTNEY_SYSTEM_REFERENCE.md  CACHING.md  CREATOR_QUICKSTART.md  DEPLOYMENT_BROWSER.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CLOUD_SYNC.md  DEPLOYMENT_MOBILE.md  DEPLOYMENT_TAURI.md  DEVELOPER_PORTAL.md  DEVELOPER_PORTAL_COMPLETE.md  DISTRIBUTED_SCENE_GRAPH.md  DOCUMENTATION_AUDIT_2026-02-21.md  (+38 more)
examples/oasis/src-tauri/: Cargo.toml  tauri.conf.json
examples/oasis/src-tauri/src/: lib.rs  main.rs
(+1591 files in other folders)
