[package]
name = "brittney-desktop"
version = "1.0.0-alpha.1"
description = "Brittney AI Desktop - Local HoloScript Assistant with BYOK Cloud Support"
authors = ["Hololand Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
anyhow = "1"

# Local LLM inference (optional - enable with feature)
# llama-cpp-2 = { version = "0.1", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# local-llm = ["llama-cpp-2"]  # Enable for embedded inference

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
